# sia-research-engine

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
deep_research_swarm/: __init__.py  __main__.py  config.py  contracts.py  streaming.py
deep_research_swarm/SIA AGENTS/: I’m proceeding, and I’m keeping the nuance SIA is not “polite.txt  PR-SIA-01_entropy_layer.md  PR-SIA-02_true_agent_reactor.md  PR-SIA-03_adversarial_critique.md  PR-SIA-04_swarm_mode.md  ```md 2.txt  (+5 more)
docker/: docker-compose.yml
plans/: v10-compression-layer-cost-optimization.md  v10-tensegrity-deliberation-architecture.md  v10-unified-sia-tensegrity.md
tests/: conftest.py  test_adapt_extraction.py  test_adapt_synthesis.py  test_adaptive_section.py  test_adversarial_critique.py  test_authority.py  test_backends.py  test_budget.py  test_call_json_retry.py  test_checkpoint_robustness.py  test_checkpointing.py  test_chunker.py  test_citation_chain.py  test_claim_graph.py  test_clarifier.py  test_cli_v10.py  test_complexity.py  test_confidence.py  test_config.py  test_contracts.py  test_contradiction.py  test_crossref.py  test_diversity.py  test_dump_state.py  test_embedding_grounding.py  test_entropy.py  test_event_log.py  test_evidence_map.py  test_export.py  test_fallback.py  test_follow_up.py  test_gap_analyzer.py  test_graph.py  test_grobid.py  test_grounding.py  test_hitl.py  test_incremental.py  test_integration.py  test_logged_node_sync.py  test_mcp_export.py  (+28 more)
(+77 files in other folders)
